fix sidebar on smaller widths

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -73,7 +73,6 @@ body {
 }
 /* Rich's attempt to add scrollbar to nav */
 .sidebar_mhZE {
-  padding-bottom: 4rem;
   height: 100% !important;
 }
 /* Make the navbar move with the page */
